[gd_scene load_steps=8 format=2]

[ext_resource path="res://Project/WorldObjects/Technical/VisibilityChecker/VisibilityChecker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Project/Characters/NPC/Abstract_dweller/AbstractDweller.gd" type="Script" id=2]
[ext_resource path="res://Project/WorldObjects/Technical/InteractionController/InteractionController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Project/WorldObjects/Dialog/DialogUIComponents/TextBoxController/DialogTextBoxController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Project/WorldObjects/Dialog/DialogUIComponents/InteractionPopup/InteractionPopup.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.5, 12.5 )

[node name="AbstractDweller" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 0
script = ExtResource( 2 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ActTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, -10 )
shape = SubResource( 1 )

[node name="InteractionPopup" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -15 )
z_index = 100
labelText = "talk"

[node name="Body" type="Node2D" parent="."]

[node name="VisibilityChecker" parent="Body" instance=ExtResource( 1 )]
visible = false
position = Vector2( -0.499999, -13 )
scale = Vector2( 1.25, 1.3 )

[node name="InteractionController" parent="Body" instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Body/InteractionController/Area2D" index="0"]
position = Vector2( 0, -2.5 )
shape = SubResource( 2 )

[node name="DialogTextBoxController" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -30 )
z_index = 100
interaction_controller_path = NodePath("../Body/InteractionController")

[editable path="Body/InteractionController"]
